--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "lab1": "npm run lab1"
   },
   "author": "",
   "license": "ISC"
