--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "lab1": "npm run lab1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lab1": "node test.js"
   },
   "author": "",
   "license": "ISC"
