--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.11",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1"
   }
 }
+
