--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "lab3",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "config/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -12,10 +11,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.11",
+    "connect": "^3.7.0",
     "cors": "^2.8.5",
+    "expess": "^0.0.1-security",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
-  }
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.7",
+    "pg": "^8.11.5",
+    "pg-promise": "^11.6.0",
+    "serve-static": "^1.15.0"
+  },
+  "description": ""
 }
-  
